# laken

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.cursor/rules/: deploy.mdc  laken-project.mdc  python-src.mdc
.cursor/scripts/: _repo.py  _uv.py  build_package.py  run_lint.py  run_tests.py  sync_dev_env.py
.cursor/skills/build-package/: SKILL.md
.cursor/skills/run-lint/: SKILL.md
.cursor/skills/run-tests/: SKILL.md
.cursor/skills/sync-dev-env/: SKILL.md
src/laken/: __init__.py  _env.py  _spark.py  cli.py  fabric.py  fabric_lakehouse.py  frames.py  lakehouse.py  lakehouse_protocol.py  local.py  local_lakehouse.py  log.py  logger.py  onelake_fetcher.py  paths.py  protocol.py  spark_runtime.py  table_names.py  types.py  workspace.py
src/laken/deploy/: __init__.py  build.py  config.py  fabric_client.py  project.py  wheel.py
tests/: conftest.py  fake_fabric_fetcher.py  test_cli_local.py  test_env.py  test_fabric_lakehouse.py  test_frames.py  test_lakehouse.py  test_local_files.py  test_local_tables.py  test_local_workspace.py  test_minimal_contract.py  test_onelake_fetcher.py  test_paths.py  test_workspace.py
tests/deploy/: test_build.py  test_cli.py  test_config.py  test_deploy_wheel_path.py  test_fabric_client.py  test_project.py  test_wheel.py
tests/integration/: conftest.py  test_fabric_integration.py
